RESOLVED FIXED29162
[Qt] Fix comparison between signed and unsigned integer warnings
https://bugs.webkit.org/show_bug.cgi?id=29162
Summary [Qt] Fix comparison between signed and unsigned integer warnings
Laszlo Gombos
Reported 2009-09-10 17:09:08 PDT
The significance of this work is to make a step towards enforcing the same code quality measures as other WebKit ports (most notably the mac port) so that contributors focusing on a specific WebKit ports are less likely break other ports because of the difference in quality requirements.
Attachments
proposed patch (11.29 KB, patch)
2009-09-10 17:13 PDT, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2009-09-10 17:13:13 PDT
Created attachment 39396 [details] proposed patch
Eric Seidel (no email)
Comment 2 2009-09-10 17:54:44 PDT
Comment on attachment 39396 [details] proposed patch LGTM. You can cq+ or land yourself since you're a committer.
Laszlo Gombos
Comment 3 2009-09-10 20:12:06 PDT
Thanks Eric for the review. Landed as http://trac.webkit.org/changeset/48280.
Note You need to log in before you can comment on or make changes to this bug.