2009-09-10  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Eric Seidel.

        [Qt] Fix comparison between signed and unsigned integer warnings
        https://bugs.webkit.org/show_bug.cgi?id=29162

        No functional change.

        * Api/qwebelement.cpp:
        (QWebElement::findAll):
        * Api/qwebhistory.cpp:
        (QWebHistory::items):
        (QWebHistory::backItems):
        (QWebHistory::forwardItems):
        (QWebHistory::saveState):
        * Api/qwebplugindatabase.cpp:
        (QWebPluginDatabase::setSearchPaths):
        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::runOpenPanel):
        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createPlugin):


2009-09-10  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] Fix comparison between signed and unsigned integer warnings
        https://bugs.webkit.org/show_bug.cgi?id=29162

        No functional change.

        * bridge/qt/qt_runtime.cpp:
        (JSC::Bindings::findMethodIndex):
        * platform/MIMETypeRegistry.cpp:
        (WebCore::initializeSupportedImageMIMETypes):
        (WebCore::initializeSupportedImageMIMETypesForEncoding):
        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::drawFocusRing):
        * platform/graphics/qt/ImageDecoderQt.cpp:
        (WebCore::ImageDecoderQt::duration):
        (WebCore::ImageDecoderQt::imageAtIndex):
        * plugins/qt/PluginPackageQt.cpp:
        (WebCore::PluginPackage::fetchInfo):



Canonical link: https://commits.webkit.org/39849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48280 268f45cc-cd09-0410-ab3c-d52691b4dbfc